--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^0.20.0",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-immutable": "^4.0.0",
     "styled-components": "^5.2.0"
